<resources>
    <string name="app_name">游咖旅行</string>
    <string name="message_detail">消息详情</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="net_error_text">网络异常</string>
    <string name="errcode_failed">授权失败</string>
    <string name="errcode_login_success">授权登录成功</string>
    <string name="launch_wx">拉起微信授权</string>
    <string name="wechat_not_installed">未安装微信</string>
    <string name="homeFragment_menu_home_text">首页</string>
    <string name="homeFragment_menu_yueka_text">约咖</string>
    <string name="homeFragment_menu_user_text">我的</string>
    <string name="location_city">选择城市</string>
    <string name="location_city_et_hint">输入城市名或拼音</string>
    <string name="my_collection">我的收藏</string>
    <string name="location_city_no_result_for_search">抱歉，暂时没找到相关城市</string>
    <string name="my_collection_btn_text">编辑</string>
    <string name="my_collection_title01_text">全部</string>
    <string name="my_collection_title02_text">降价</string>
    <string name="my_collection_title03_text">失效</string>
    <string name="hotelActivity_btn_hotel_text">酒店</string>
    <string name="hotelActivity_btn_farm_text">民宿</string>
    <string name="informationActivity_title">个人信息设置</string>
    <string name="informationActivity_nickName_text">昵称</string>
    <string name="informationActivity_sex_text">性别</string>
    <string name="informationActivity_dateTime_text">出生日期</string>
    <string name="informationActivity_bindPhoto_text">绑定手机</string>
    <string name="informationActivity_bindEmail_text">绑定邮箱</string>
    <string name="informationActivity_accountAssociation_text">账号关联</string>
    <string name="informationActivity_updatePassword_text">修改密码</string>
    <string name="loginActivity_login_text">登录</string>
    <string name="loginActivity_other_login">还没有账号？注册</string>
    <string name="infoActivity_finish_text">完成</string>
    <string name="infoActivity_nickName_title_text">编辑昵称</string>
    <string name="infoActivity_date_title_text">编辑出生日期</string>
    <string name="infoActivity_phone_title_text">绑定手机号</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="loginActivity_forgetPassword_text">忘记密码</string>
    <string name="registerActivity_title_text">注册</string>
    <string name="regiserActivity_phone_ed_hint_text">请输入您的手机号码</string>
    <string name="registerActivity_getcode_text">获取验证码</string>
    <string name="registerActivity_code_ed_hint_text">请输入验证码</string>
    <string name="registerActivity_textView_text">我已阅读并接受</string>
    <string name="registerActivity_xieyi_text">《注册协议》</string>
    <string name="settingPasswordActivity_title_text">设置密码</string>
    <string name="settingPasswordActivity_et_hint_text">请设置你的密码</string>
    <string name="settingPasswordActivity_finish_text">完成</string>
    <string name="identityActivity_title_text">身份认证</string>
    <string name="identityActivity_name_hint">请填写您的真实姓名</string>
    <string name="identityActivity_name_text">姓名</string>
    <string name="identityActivity_identity_num_text">身份证</string>
    <string name="identityActivity_identity_num_hint">请输入十八位居民身份证号码</string>
    <string name="identityActivity_text01">1.请在下框规定的位置，上传手持本人身份证照片，要求有身份证的正面和反面。</string>
    <string name="identityActivity_text02">2.请保持证件照片五官清晰无遮挡，身份证能看清文字与图像。</string>
    <string name="identityActivity_text03">3.我们将在1-2个工作日内为您审核。</string>
    <string name="identityActivity_face_text">人像面</string>
    <string name="identityActivity_vici_text">国徽面</string>
    <string name="identityActivity_submit_text">立即认证</string>
    <string name="infoSexActivity_title_text">选择性别</string>
    <string name="orderActivity_title_text">我的订单</string>
    <string name="orderActivity_title01_text">机票</string>
    <string name="orderActivity_title02_text">酒店</string>
    <string name="orderActivity_title03_text">旅游</string>
    <string name="orderActivity_title04_text">同城咖</string>
    <string name="orderActivity_title05_text">约咖</string>
    <string name="orderActivity_title06_text">旅拍</string>
    <string name="orderYueActuivity_title_text">我是领咖</string>
    <string name="otherYueActivity_title_text">成为领咖</string>
    <string name="planeTicketActivity_one_text">单程</string>
    <string name="planeTicketActivity_two_text">往返</string>
    <string name="tourismActivitySeach_Hint_text">搜索关键词</string>
    <string name="tourismActivity_layout_text">热门景点门票</string>
    <string name="tourismActivity_layout1_text">周边游</string>
    <string name="tourismActivity_layout2_text">国内游</string>
    <string name="tourismActivity_layout3_text">出境游</string>
    <string name="tourismActivity_layout4_text">定制游</string>
    <string name="tourismActivity_layout5_text">亲子游</string>
    <string name="tourismActivity_layout6_text">蜜月游</string>
    <string name="registerWebActivity_title_text">注册协议</string>
    <string name="domesticTravelActivity_title_text">国内游</string>
    <string name="domesticTravelActivity_gridView_text">当季风向标</string>
    <string name="domesticTravelActivity_more_text">更多</string>
    <string name="domesticTravelActivity_listview_text">正在热卖</string>
    <string name="honeymoonTravelActivity_title_text">蜜月游</string>
    <string name="peripheryTravelActivity_title_text">周边游</string>
    <string name="peripheryTravelActivity_radioButton1_text">当季热门</string>
    <string name="peripheryTravelActivity_radioButton2_text">度假酒店</string>
    <string name="dialog_show_title">升级提示</string>
    <string name="dialog_show_commit">确定</string>
    <string name="dialog_show_cancel">取消</string>
    <string name="addFootPrintActivity_title_text">足迹</string>
    <string name="addFootPrintActivity_time_text">时间线</string>
    <string name="addFootPrintActivity_place_text">地点</string>
    <string name="addFootPrintActivity_edittext_text">插入旅程最美的回忆</string>
    <string name="addFootPrintActivity_choose_photo_text">选择照片</string>
    <string name="addFootPrintActivity_yearNum_text">年旅程</string>
    <string name="addFootPrintActivity_cityNum_text">个城市</string>
    <string name="addFootPrintActivity_countryNum_text">个国家</string>
    <string name="exitTravelActivity_title_text">出境游</string>
    <string name="exitTravelActivity_hot_text">热门目的地</string>
    <string name="exitTravelActivity_honey_text">浪漫海岛</string>
    <string name="footPrintActivity_title_text">足迹</string>
    <string name="footPrintActivity_switch_text">中国</string>
    <string name="forgetPasswordActivity_edittext_hint">请输入密码</string>
    <string name="infoActivity_edittext_hint">请输入验证码</string>
    <string name="infoActivity_next_text">下一步</string>
    <string name="lineChoiceActivity_title_text">地点选择</string>
    <string name="lineChoiceActivity_fnish_text">完成编辑</string>
    <string name="loginActivity_phone_hint">手机号</string>
    <string name="loginActivity_code_hint">验证码</string>
    <string name="orderYueActivity_text">已认证</string>
    <string name="orderYueActivity_line_text">路线管理</string>
    <string name="orderYueActivity_send_text">发布约咖</string>
    <string name="orderYueActivity_my_yueka">我的发布</string>
    <string name="orderYueActivity_my_collection">我的收藏</string>
    <string name="orderYueActivity_yueka">约咖历程</string>
    <string name="orderYueActivity_user_content">用户评论</string>
    <string name="otherYueActivity_text">认证成为大咖</string>
    <string name="presetManagerActivity_title_text">路线预设</string>
    <string name="presetManagerActivity_add_line">添加路线</string>
    <string name="raiderActivity_title_text">攻略</string>
    <string name="raiderDetailActivity_title_text">城市攻略</string>
    <string name="raiderDetailActivity_spot_list">景点列表</string>
    <string name="raiderDetailActivity_radier_text">攻略</string>
    <string name="raiderDetailActivity_line_text">路线</string>
    <string name="raiderDetailActivity_off_line">离线</string>
    <string name="raiderDetailActivity_feedback_text">反馈</string>
    <string name="seachActivity_edittect_hint">搜索关键词</string>
    <string name="seachActivity_hint1">推荐搜索</string>
    <string name="seachActivity_hint2">历史搜索</string>
    <string name="sendYueKaActivity_title_text">发布约咖</string>
    <string name="sendYueKaActivity_edittext_hint">请输入约咖名称</string>
    <string name="sendYueKaActivity_text1">路线设定</string>
    <string name="sendYueKaActivity_text2">请选择路线</string>
    <string name="sendYueKaActivity_text3">基础价格</string>
    <string name="sendYueKaActivity_text4">价格说明</string>
    <string name="sendYueKaActivity_text5">包车价格</string>
    <string name="sendYueKaActivity_text6">请输入包车单价</string>
    <string name="sendYueKaActivity_text7">人数上限</string>
    <string name="sendYueKaActivity_text8">一对一服务</string>
    <string name="sendYueKaActivity_text9">三人出行</string>
    <string name="sendYueKaActivity_text10">请输入人数</string>
    <string name="sendYueKaActivity_text11">空闲时间</string>
    <string name="sendYueKaActivity_text12">(发布内容将在空闲时间之后自动撤回)</string>
    <string name="sendYueKaActivity_text13">补充描述</string>
    <string name="sendYueKaActivity_text14">发布</string>
    <string name="settingActivity_title_text">设置</string>
    <string name="settingActivity_text1">开启消息推送</string>
    <string name="settingActivity_text2">我的评价</string>
    <string name="settingActivity_text3">联系我们</string>
    <string name="settingActivity_text4">关于我们</string>
    <string name="settingActivity_text5">分享APP</string>
    <string name="settingActivity_text6">退出登录</string>
    <string name="settingActivity_text7">投诉与建议</string>
    <string name="settingPassWordActivity_title_text">设置密码</string>
    <string name="spotListActivity_title_back">景点列表</string>
    <string name="spotTickerActivity_text1">景点简介</string>
    <string name="updatePasswordActivity_title_text">修改密码</string>
    <string name="updatePasswrodActivity_text1">请输入原始密码</string>
    <string name="updatePasswrodActivity_text2">请输入新密码</string>
    <string name="walletActivity_title_text">我的钱包</string>
    <string name="walletActivity_text1">0.0</string>
    <string name="walletActivity_text2">余额(元)</string>
    <string name="walletActivity_text3">明细</string>
    <string name="walletActivity_text4">优惠券</string>
    <string name="walletActivity_text5">充值</string>
    <string name="walletActivity_text6">提现</string>
    <string name="walletActivity_text7">银行卡</string>
    <string name="walletActivity_text8">支付设置</string>
    <string name="webViewActivity_title_text">编辑详情</string>
    <string name="yushengActivity_title_text">余生</string>
    <string name="yushengActivity_text1">人的一生其实非常短暂</string>
    <string name="yushengActivity_text2">大约只有三万多天</string>
    <string name="yushengActivity_text3">发呆、刷微博、打游戏。一转眼又是一天</string>
    <string name="yushengActivity_text4">等待、犹豫、拖延，一晃神又是一月</string>
    <string name="yushengActivity_text5">你出生于</string>
    <string name="yushengActivity_text6">你是一名</string>
    <string name="yushengActivity_text7">想做的事情是否还记得</string>
    <string name="yushengActivity_text8">定下的目标是否有实现</string>
    <string name="yushengActivity_text9">开启余生</string>
    <string name="yushengActivity_text10">开启生命的倒计时</string>
    <string name="yushengDetailActivity_title1">你的</string>
    <string name="yushengDetailActivity_title2">余生</string>
    <string name="yushengDetailActivity_title3">还剩</string>
    <string name="acceptOrderActivity_title_text">我的接单</string>
    <string name="acceptOrderActivity_text1">已完成</string>
    <string name="acceptOrderActivity_text2">进行中</string>
    <string name="acceptOrderActivity_text3">已失效</string>
    <string name="orderBackActivity_title_text">退单</string>
    <string name="orderBackActivity_text1">您正在尽心约咖退单操作，请根据真实情况填写原因，我们将在3个工作日内为您手里</string>
    <string name="orderBackActivity_text2">本次退单详情：</string>
    <string name="orderBackActivity_text3">自身原因</string>
    <string name="orderBackActivity_text4">领咖原因</string>
    <string name="orderBackActivity_text5">请进行简单描述</string>
    <string name="orderBackActivity_text6">提交</string>
</resources>