<?xml version="1.0" encoding="utf-8"?>
<com.cn.uca.view.StatusView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cn.uca.ui.view.user.AcceptOrderActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_40"
        android:background="@drawable/gradient" >

        <TextView
            android:id="@+id/back"
            style="@style/style_back" />

        <TextView
            android:id="@+id/title"
            style="@style/style_title"
            android:text="@string/acceptOrderActivity_title_text" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_20"
            android:text="@string/orderActivity_title01_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/title02"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/acceptOrderActivity_text1"
            android:padding="@dimen/padding_20"
            android:textSize="@dimen/text_14"
            android:textColor="@color/black"
            android:gravity="center"/>
        <TextView
            android:id="@+id/title03"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/acceptOrderActivity_text2"
            android:padding="@dimen/padding_20"
            android:textSize="@dimen/text_14"
            android:textColor="@color/black"
            android:gravity="center"/>
        <TextView
            android:id="@+id/title04"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/acceptOrderActivity_text3"
            android:padding="@dimen/padding_20"
            android:textSize="@dimen/text_14"
            android:textColor="@color/black"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</com.cn.uca.view.StatusView>
