<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/yusheng_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_40"
        android:background="@drawable/gradient" >

        <TextView
            android:id="@+id/back"
            style="@style/style_back"/>

        <TextView
            android:id="@+id/title"
            style="@style/style_title"
            android:text="@string/yushengActivity_title_text"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_15"
                android:gravity="center"
                android:text="@string/yushengActivity_text1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:gravity="center"
                android:text="@string/yushengActivity_text2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_20"
                android:gravity="center"
                android:text="@string/yushengActivity_text3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:gravity="center"
                android:text="@string/yushengActivity_text4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text"
            android:layout_marginTop="@dimen/padding_30"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_50"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/yushengActivity_text5"
                    android:textColor="@color/black2"
                    android:textSize="@dimen/text_18"
                    android:gravity="right"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_5">

                    <TextView
                        android:id="@+id/baithDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:gravity="center"
                        android:textColor="@color/ori"
                        android:textSize="@dimen/text_20"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:scaleType="matrix"
                        android:src="@color/ori" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_50"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/yushengActivity_text6"
                    android:gravity="right"
                    android:textColor="@color/black2"
                    android:textSize="@dimen/text_18"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:id="@+id/layout2"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_5">

                    <TextView
                        android:id="@+id/sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:gravity="center"
                        android:textColor="@color/ori"
                        android:textSize="@dimen/text_20" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:scaleType="matrix"
                        android:src="@color/ori" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bbb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info"
            android:layout_marginTop="@dimen/padding_25"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yushengActivity_text7" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yushengActivity_text8"
                android:layout_marginTop="@dimen/padding_8"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/aaa"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="@color/ori"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/yushengActivity_text10"
                android:textColor="@color/white" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/aaa"
            android:layout_below="@id/bbb">

            <com.cn.uca.view.dialog.WaveView
                android:id="@+id/wave"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_alignParentBottom="true"></com.cn.uca.view.dialog.WaveView>

            <TextView
                android:id="@+id/start"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circular_background"
                android:gravity="center"
                android:text="@string/yushengActivity_text9"
                android:textColor="@color/white" />
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>
