<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        android:id="@+id/stateTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_20"
        android:background="@drawable/gradient"/>
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_40"
        android:background="@drawable/gradient"
        android:layout_below="@+id/stateTitle">

        <TextView
            android:id="@+id/back"
            style="@style/style_back"/>

        <TextView
            style="@style/style_title"
            android:text="@string/raiderDetailActivity_title_text"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/food_normal"
        android:layout_below="@id/title"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/padding_20"
        android:layout_marginRight="@dimen/padding_20"/>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_12"
            android:text="@string/raiderDetailActivity_line_text" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:scaleType="matrix"
            android:layout_marginTop="@dimen/padding_5"
            android:layout_marginBottom="@dimen/padding_5"
            android:src="@color/gray" />

        <TextView
            android:id="@+id/raiders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/raiderDetailActivity_radier_text"
            android:gravity="center"
            android:padding="@dimen/padding_12"/>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:scaleType="matrix"
            android:layout_marginTop="@dimen/padding_5"
            android:layout_marginBottom="@dimen/padding_5"
            android:src="@color/gray" />
        <TextView
            android:id="@+id/spot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_12"
            android:drawableLeft="@mipmap/list_back"
            android:text="@string/raiderDetailActivity_spot_list" />

    </LinearLayout>
    <LinearLayout
        android:layout_above="@id/layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/padding_12"
        android:layout_marginLeft="@dimen/padding_12">
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lixian"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/off_line_back"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raiderDetailActivity_off_line"
                android:gravity="center"
                android:layout_marginTop="@dimen/padding_5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/padding_12">
            <TextView
                android:id="@+id/fankui"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/feedback"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raiderDetailActivity_feedback_text"
                android:gravity="center"
                android:layout_marginTop="@dimen/padding_5"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>